# FreeCAD

./: .clang-tidy  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt
.github/workflows/: CI_master.yml  build_release.yml  codeql_cpp.yml
cMake/FreeCAD_Helpers/: InitializeFreeCADBuildOptions.cmake  SetupShibokenAndPyside.cmake
package/rattler-build/: recipe.yaml
package/rattler-build/windows/: create_bundle.sh
src/App/: Application.cpp  Application.h  ApplicationDirectories.cpp  ApplicationDirectories.h  CMakeLists.txt  ComplexGeoData.cpp  ComplexGeoData.h  ComplexGeoDataPyImp.cpp  DocumentObject.cpp  DocumentObject.h  Metadata.cpp  Metadata.h  MetadataPyImp.cpp  PreCompiled.h  PropertyGeo.cpp  PropertyGeo.h
src/Base/: CMakeLists.txt  Metadata.cpp  Metadata.h  MetadataPy.xml  MetadataPyImp.cpp
src/Gui/: Application.cpp  ApplicationPy.cpp  ApplicationPy.h  CMakeLists.txt  DlgCreateNewTheme.ui  DlgCreateNewThemeImp.cpp  DlgCreateNewThemeImp.h  DlgGeneralImp.cpp  DlgGeneralImp.h  DlgPreferencesImp.cpp  EditableDatumLabel.cpp  EditableDatumLabel.h  MainWindow.cpp  ProgramInformation.cpp  QuantitySpinBox.cpp  SoFCDB.cpp  StartupProcess.cpp  StartupProcess.h  ThemeManager.cpp  ThemeManager.h  Tree.cpp  View3DSettings.cpp  Workbench.cpp
src/Gui/Dialogs/: DlgMacroExecuteImp.cpp  DlgPreferencePackManagementImp.cpp  DlgVersionMigrator.cpp  DlgVersionMigrator.h
src/Gui/Icons/: resource.qrc
src/Gui/Language/: FreeCAD.ts  FreeCAD_be.ts  FreeCAD_ca.ts  FreeCAD_cs.ts  FreeCAD_da.ts  FreeCAD_de.ts  FreeCAD_el.ts  FreeCAD_es-AR.ts  FreeCAD_es-ES.ts  FreeCAD_eu.ts  FreeCAD_fi.ts  FreeCAD_fr.ts  FreeCAD_hr.ts  FreeCAD_hu.ts  FreeCAD_it.ts  FreeCAD_ja.ts  FreeCAD_ka.ts  FreeCAD_ko.ts  FreeCAD_lt.ts  FreeCAD_ms.ts  FreeCAD_nl.ts  FreeCAD_pl.ts  FreeCAD_pt-BR.ts  FreeCAD_pt-PT.ts  FreeCAD_ro.ts  FreeCAD_ru.ts  FreeCAD_sl.ts  FreeCAD_sr-CS.ts  FreeCAD_sr.ts  FreeCAD_sv-SE.ts  FreeCAD_tr.ts  FreeCAD_uk.ts  FreeCAD_val-ES.ts  FreeCAD_zh-CN.ts  FreeCAD_zh-TW.ts
src/Gui/Navigation/: NavigationStyle.cpp  NavigationStyle.h  NavigationStyleWidget.cpp  NavigationStyleWidget.h  PythonNavigationStyle.cpp  PythonNavigationStyle.h  PythonNavigationStyle.pyi  PythonNavigationStylePyImp.cpp
src/Gui/PreferencePackTemplates/: Shortcuts.cfg
src/Gui/PreferencePages/: DlgSettingsGeneral.cpp  DlgSettingsGeneral.ui  DlgSettingsNavigation.cpp
src/Gui/Selection/: Selection.cpp  SoFCUnifiedSelection.cpp
src/Gui/TaskView/: TaskImage.cpp
src/Gui/ThemeTemplates/: Window_Colors_theme_template.cfg
src/Mod/: CMakeLists.txt
src/Mod/AddonManager/: AddonCatalog.py  AddonManager.py  CMakeLists.txt  Init.py  InitGui.py  TestAddonManagerApp.py  TestAddonManagerGui.py  package_details.py
src/Mod/AddonManager/AddonManagerTest/: test_information.md
src/Mod/AddonManager/App/: CMakeLists.txt  NetworkManager.py  addonmanager_dependency_installer.py  addonmanager_freecad_interface.py  addonmanager_git.py  addonmanager_installer.py  addonmanager_macro.py  addonmanager_uninstaller.py  addonmanager_utilities.py  addonmanager_workers_installation.py  addonmanager_workers_startup.py  addonmanager_workers_utility.py
src/Mod/AddonManager/Gui/: AddonManager_rc.py  CMakeLists.txt  addonmanager_connection_checker.py  addonmanager_devmode.py  addonmanager_devmode_add_content.py  addonmanager_devmode_metadata_checker.py  addonmanager_devmode_predictor.py  addonmanager_firstrun.py  addonmanager_installer_gui.py  addonmanager_uninstaller_gui.py  addonmanager_update_all_gui.py  install_to_toolbar.py  manage_python_dependencies.py  package_details.py  package_list.py
src/Mod/AddonManagerLauncher/: CMakeLists.txt  Init.py  InitGui.py
src/Mod/AddonManagerLauncher/Gui/: CMakeLists.txt  Downloader.py  Launcher.py
src/Mod/AddonManagerLauncher/Resources/: CMakeLists.txt
src/Mod/AddonManagerLauncher/Resources/dialogs/: CMakeLists.txt  installation_warning.ui  installing.ui
src/Mod/AddonManagerLauncher/Resources/icons/: CMakeLists.txt
src/Mod/AddonManagerLauncher/Resources/preferences/: CMakeLists.txt  addonmanagerlauncherprefs.ui
src/Mod/AddonManagerLauncher/Resources/translations/: CMakeLists.txt
src/Mod/Assembly/: AssemblyGlobal.h  CMakeLists.txt  Commands.py  InitGui.py  Preferences.py  TestAssemblyWorkbench.py
src/Mod/Assembly/App/: AssemblyLink.cpp  AssemblyObject.cpp
src/Mod/Assembly/Gui/: CMakeLists.txt
src/Mod/Assembly/Gui/Resources/: Assembly.qrc
src/Mod/BIM/: ArchMaterial.py
src/Mod/BIM/bimcommands/: BimProjectManager.py
src/Mod/BIM/importers/: exportIFC.py
src/Mod/BIM/nativeifc/: ifc_tools.py
src/Mod/CAM/Gui/: CMakeLists.txt
src/Mod/CAM/Path/: Geom.py
src/Mod/Fem/femguiutils/: disambiguate_solid_selection.py
src/Mod/Mesh/Gui/: Workbench.cpp
src/Mod/Part/App/: AttachEnginePyImp.cpp  AttachExtension.cpp  AttachExtension.h  Attacher.cpp  Attacher.h  CMakeLists.txt  MeasureClient.cpp  PropertyTopoShape.cpp  PropertyTopoShape.h  TopoShape.h  TopoShapeExpansion.cpp
src/Mod/Part/Gui/: DlgSettingsGeneral.ui
src/Mod/PartDesign/App/: FeatureExtrude.cpp  FeatureExtrude.h  FeatureHole.cpp  FeaturePad.cpp  FeaturePocket.cpp  FeatureRefine.cpp  FeatureRefine.h  ShapeBinder.cpp  ShapeBinder.h
src/Mod/PartDesign/PartDesignTests/: TestTopologicalNamingProblem.py
src/Mod/Sketcher/: CMakeLists.txt  TestSketcherGui.py
src/Mod/Sketcher/App/: Constraint.cpp  SketchObject.cpp  SketchObjectPyImp.cpp
src/Mod/Sketcher/Gui/: CommandConstraints.cpp  DrawSketchController.h  EditModeInformationOverlayCoinConverter.cpp  ViewProviderSketch.cpp
src/Mod/Spreadsheet/Gui/: SpreadsheetView.cpp
src/Mod/Start/App/: CMakeLists.txt  CustomFolderModel.cpp  DisplayedFilesModel.cpp  DisplayedFilesModel.h  FileUtilities.cpp  FileUtilities.h  ThumbnailSource.cpp  ThumbnailSource.h
src/Mod/Start/Gui/: GeneralSettingsWidget.cpp  StartView.cpp  StartView.h  (+1 more)
src/Mod/Test/: CMakeLists.txt  GuiTests.py  Init.py
src/Tools/: updatecrowdin.py
tests/: CMakeLists.txt
tests/src/App/: Application.cpp  ApplicationDirectories.cpp  ComplexGeoData.cpp
tests/src/Gui/: CMakeLists.txt  NavigationStyle.cpp
(+70 files in other folders)
